NetBSD Problem Report #30408

From martin@duskware.de  Thu Jun  2 20:47:00 2005
Return-Path: <martin@duskware.de>
Received: from mail.duskware.de (mail.duskware.de [213.146.108.170])
	by narn.netbsd.org (Postfix) with ESMTP id 48B4663B104
	for <gnats-bugs@gnats.NetBSD.org>; Thu,  2 Jun 2005 20:46:59 +0000 (UTC)
Message-Id: <200506022046.j52KkpRB001201@night-porter.duskware.de>
Date: Thu, 2 Jun 2005 22:46:51 +0200 (CEST)
From: Martin Husemann <martin@duskware.de>
Reply-To: martin@duskware.de
To: gnats-bugs@netbsd.org
Subject: compat/irix uses "bufpages" in dubious context
X-Send-Pr-Version: 3.95

>Number:         30408
>Category:       kern
>Synopsis:       compat/irix uses "bufpages" in dubious context
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jun 02 20:47:00 +0000 2005
>Closed-Date:    Sat Nov 28 20:10:31 +0000 2009
>Last-Modified:  Sat Nov 28 20:10:31 +0000 2009
>Originator:     Martin Husemann
>Release:        NetBSD 3.99.3
>Organization:
>Environment:
System: NetBSD night-porter.duskware.de 3.99.3 NetBSD 3.99.3 (PORTER) #5: Fri May 20 12:54:13 CEST 2005 martin@night-porter.duskware.de:/usr/src/sys/arch/i386/compile/PORTER i386
Architecture: i386
Machine: i386
>Description:

The irix compat stuff uses the variable bufpages, which usualy is 0 nowadays.
The returned structure member "bufmem" is marked "not usefull" in sgi docs,
but maybe we should return something meaningfull here anyway.

>How-To-Repeat:
Code inspection

>Fix:
We could return bufmem/PAGE_SIZE, or the file cache pages, as in this patch

Index: irix_sysmp.c
===================================================================
RCS file: /cvsroot/src/sys/compat/irix/irix_sysmp.c,v
retrieving revision 1.13
diff -c -u -r1.13 irix_sysmp.c
--- irix_sysmp.c	2 Jun 2005 20:14:55 -0000	1.13
+++ irix_sysmp.c	2 Jun 2005 20:40:43 -0000
@@ -184,7 +184,6 @@
 	char *buf;
 	size_t len;
 {
-	extern u_int bufpages;
 	void *kbuf;
 	int error = 0;

@@ -200,7 +199,7 @@
 		    + uvmexp.wired + (uvmexp.swpages - uvmexp.swpgonly);
 		irm->availrmem = uvmexp.free + uvmexp.active + uvmexp.inactive
 		    + uvmexp.wired;
-		irm->bufmem = bufpages;
+		irm->bufmem = uvmexp.filepages;
 		irm->physmem = uvmexp.npages;
 		irm->dchunkpages = 0; /* unsupported */
 		irm->pmapmem = 0;     /* unsupported */

>Release-Note:

>Audit-Trail:
From: David Laight <dsl@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/30408 CVS commit: src/sys/compat/irix
Date: Sat, 28 Nov 2009 20:09:56 +0000

 Module Name:	src
 Committed By:	dsl
 Date:		Sat Nov 28 20:09:56 UTC 2009

 Modified Files:
 	src/sys/compat/irix: irix_sysmp.c

 Log Message:
 Set irm->bufmem = uvmexp.filepages;
 as suggested in PR/30408


 To generate a diff of this commit:
 cvs rdiff -u -r1.21 -r1.22 src/sys/compat/irix/irix_sysmp.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dsl@NetBSD.org
State-Changed-When: Sat, 28 Nov 2009 20:10:31 +0000
State-Changed-Why:
Suggested fix applied


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.