Set irm->bufmem = uvmexp.filepages; as suggested in PR/30408